# coarsening_example

./: .gitignore  CMakeLists.txt  README.md
data/: islands_2D.tri  islands_2D.vert  plate_with_crack_and_hole.color  plate_with_crack_and_hole.tri  plate_with_crack_and_hole.vert
src/: array_functions.hpp  binary_io.hpp  check_connectivity.cpp  coarsen.cpp  coloring.cpp  find_corners.cpp  find_edges.cpp  find_islands.cpp  find_quads.cpp  interface.hpp  print.hpp  quality_improvement.cpp  threadpool.hpp  type_aliases.hpp
tests/: CMakeLists.txt  coarsen_tests.cpp  coloring_tests.cpp  find_corners_tests.cpp  find_edges_tests.cpp  find_islands_tests.cpp  find_quads_tests.cpp  improve_connectivity_tests.cpp  mesh_permutation.hpp
